# fastapi-examples

./: .gitignore  MANIFEST.in  Pipfile  setup.cfg
src/fastapi_with_sqlalchemy/: __init__.py  cmdline.py  server.py
src/fastapi_with_sqlalchemy/alembic/: alembic.ini  env.py
src/fastapi_with_sqlalchemy/alembic/versions/: 5a74194050ad_init.py  761df2413c56_.py
src/fastapi_with_sqlalchemy/api/: __init__.py  utils.py
src/fastapi_with_sqlalchemy/api/middlewares/: __init__.py  session.py
src/fastapi_with_sqlalchemy/api/routers/: __init__.py  user.py
src/fastapi_with_sqlalchemy/config/: __init__.py  settings.yml
src/fastapi_with_sqlalchemy/dao/: base.py
src/fastapi_with_sqlalchemy/db/: __init__.py  models.py
src/fastapi_with_sqlalchemy/service/: base.py
src/fastapi_with_sqlalchemy/tasks/: __init__.py
src/fastapi_with_sqlalchemy/utils/: __init__.py  exceptions.py  types.py
tests/: conftest.py  test_db.py  test_migrate.py
tests/dao/: test_dao.py  test_user.py
tests/router/: test_user.py
