[metadata]
name = fastapi-with-sqlalchemy
version = attr: fastapi_with_sqlalchemy.__version__
author = huagang
author_email = huagang517@126.com
description = FastAPI example for sqlalchemy
keywords = fastapi-with-sqlalchemy
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python :: 3.9

[options]
python_requires > = 3.9
include_package_data = True
packages = find:
package_dir =
    = src
install_requires =


[options.packages.find]
where = src
exclude =
    tests*
    docs

# https://setuptools.readthedocs.io/en/latest/userguide/entry_point.html
[options.entry_points]
console_scripts =
    fastapi_with_sqlalchemy = fastapi_with_sqlalchemy.cmdline:main

# Packaging project data in module fastapi_with_sqlalchemy.
# https://setuptools.readthedocs.io/en/latest/userguide/datafiles.html?highlight=package_data
[options.package_data]
fastapi_with_sqlalchemy.config = settings.yml

# Copy data for user from project when pip install.
# The relative path is prefix `sys.prefix` . eg: `/usr/local/`.
# Path and data will remove When pip uninstall.
# https://docs.python.org/3/distutils/setupscript.html#installing-additional-files
[options.data_files]
etc/crawlerstack/spiderkeeper =
    src/fastapi-with-sqlalchemy/config/settings.yml


[tool:pytest]
testpaths = tests
python_files = tests.py test_*.py
log_cli = 1
log_cli_level = INFO
;log_cli_format = "%(asctime)s %(levelname)8s %(message)s (%(filename)s:%(lineno)s)"
;log_cli_date_format=%Y-%m-%d %H:%M:%S

[pylint.master]
ignore=CVS, migrations
load-plugins = pylint_pytest

[pylint.design]
min-public-methods=1
max-args=6

[flake8]
max-line-length = 120
exclude =
    .git,
    __pycache__,
    docs/source/conf.py,
    old,
    build,
    dist,
    .tox,
    .pytest_cache
    .scannerwork
    dist

[mypy]
python_version = 3.9
plugins = sqlalchemy.ext.mypy.plugin